# ml22-dennis

./: environment.yml  hypertune.py  pyproject.toml
notebooks/: MNIST_classification.ipynb
src/data/: make_dataset.py
src/models/: metrics.py  train_model.py
